tests/rosetta/out/C/bioinformatics-base-count.error
cc: exit status 1
/tmp/bioinformatics-base-count.c: In function ‘padLeft’:
/tmp/bioinformatics-base-count.c:49:32: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   49 |     char *tmp1 = concat_string(res, " ");
      |                                ^~~
/tmp/bioinformatics-base-count.c:7:34: note: expected ‘char *’ but argument is of type ‘const char *’
    7 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/bioinformatics-base-count.c:53:30: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   53 |   char *tmp2 = concat_string(res, s);
      |                              ^~~
/tmp/bioinformatics-base-count.c:7:34: note: expected ‘char *’ but argument is of type ‘const char *’
    7 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/bioinformatics-base-count.c: In function ‘main’:
/tmp/bioinformatics-base-count.c:87:32: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   87 |     char *tmp14 = slice_string(dna, i, k);
      |                                ^~~
/tmp/bioinformatics-base-count.c:21:33: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/bioinformatics-base-count.c:88:38: error: invalid operands to binary + (have ‘const char *’ and ‘char *’)
   88 |     printf("%s\n", padLeft(tmp13, 5) + ": " + tmp14);
      |                    ~~~~~~~~~~~~~~~~~ ^
      |                    |                 |
      |                    const char *      char *
/tmp/bioinformatics-base-count.c:92:35: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   92 |     const char *ch = slice_string(dna, idx, idx + 1);
      |                                   ^~~
/tmp/bioinformatics-base-count.c:21:33: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/bioinformatics-base-count.c:113:28: error: invalid operands to binary + (have ‘char *’ and ‘const char *’)
  113 |   printf("%s\n", "    A: " + padLeft(tmp15, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      const char *
/tmp/bioinformatics-base-count.c:115:28: error: invalid operands to binary + (have ‘char *’ and ‘const char *’)
  115 |   printf("%s\n", "    C: " + padLeft(tmp16, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      const char *
/tmp/bioinformatics-base-count.c:117:28: error: invalid operands to binary + (have ‘char *’ and ‘const char *’)
  117 |   printf("%s\n", "    G: " + padLeft(tmp17, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      const char *
/tmp/bioinformatics-base-count.c:119:28: error: invalid operands to binary + (have ‘char *’ and ‘const char *’)
  119 |   printf("%s\n", "    T: " + padLeft(tmp18, 3));
      |                  ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
      |                  |           |
      |                  char *      const char *
